[project]
name = "cbsodata"
description = "Statistics Netherlands opendata API client for Python"
authors = [
    { name = "Jonathan de Bruin", email = "jonathandebruinos@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
license = {text = "MIT"}
dependencies = ["requests"]
dynamic = ["version"]
requires-python = ">=3.8"

[project.scripts]
cbsodata = "cbsodata.__main__:main"
cbs = "cbsodata.__main__:main"

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/J535D165/cbsodata"
Documentation = "http://cbsodata.readthedocs.io/"

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["cbsodata"]

[tool.setuptools_scm]
write_to = "cbsodata/_version.py"

[tool.ruff]
select = ["E", "F", "UP", "I", "B"]

[tool.ruff.isort]
force-single-line = true
